--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,23 @@
 body
 {
-    color:deeppink;
+    color:rgb(61, 59, 61);
 text-align: center;
 font-family: "Arial";
+font-size: 16px;
+
+}
+#container
+{
+width: 70%;
+padding: 1em;
+text-align: left;
+border: 1px solid #ddd;
+margin: 0 auto;
+
+
+}
+#container h1
+{
+font-size: 20px;
 
 }
