--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,11 +1,24 @@
 body
 {
-    color:rgb(61, 59, 61);
+color:#333;
 text-align: center;
 font-family: "Arial";
 font-size: 16px;
+margin: 0;
+padding: 0;
+}
+
+#cabecera
+{
+    background: #33a;
+    box-shadow: 0px 2px 50px 0px  ;
+    color: white;
+    font-weight: bold;
+    margin: 0;
+    padding: 0.5cm;
 
 }
+
 #container
 {
 width: 70%;
