--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,8 +2,10 @@ body
 {
     color:rgb(61, 59, 61);
 text-align: center;
-font-family: "Arial";
+font-family: "curier";
 font-size: 16px;
+margin: 0;
+padding: 0;
 
 }
 #container
