--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,7 +2,7 @@ body
 {
 color:#333;
 text-align: center;
-font-family: "curier";
+font-family: "arial";
 font-size: 16px;
 margin: 0;
 padding: 0;
@@ -11,7 +11,7 @@ padding: 0;
 #cabecera
 {
     background: #33a;
-    box-shadow: 0px 2px 50px 0px  ;
+    box-shadow: 0px 2px 50px 0px rgba(0,0,0,0.5);
     color: white;
     font-weight: bold;
     margin: 0;
